; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_scripting-masscan.c_mass_setconfig.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_scripting-masscan.c_mass_setconfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lua_State = type { i32 }
%struct.MasscanWrapper = type { %struct.Masscan* }
%struct.Masscan = type { i32 }

@MASSCAN_CLASS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lua_State*)* @mass_setconfig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mass_setconfig(%struct.lua_State* %0) #0 {
  %2 = alloca %struct.lua_State*, align 8
  %3 = alloca %struct.MasscanWrapper*, align 8
  %4 = alloca %struct.Masscan*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.lua_State* %0, %struct.lua_State** %2, align 8
  %7 = load %struct.lua_State*, %struct.lua_State** %2, align 8
  %8 = load i32, i32* @MASSCAN_CLASS, align 4
  %9 = call %struct.MasscanWrapper* @luaL_checkudata(%struct.lua_State* %7, i32 1, i32 %8)
  store %struct.MasscanWrapper* %9, %struct.MasscanWrapper** %3, align 8
  %10 = load %struct.MasscanWrapper*, %struct.MasscanWrapper** %3, align 8
  %11 = getelementptr inbounds %struct.MasscanWrapper, %struct.MasscanWrapper* %10, i32 0, i32 0
  %12 = load %struct.Masscan*, %struct.Masscan** %11, align 8
  store %struct.Masscan* %12, %struct.Masscan** %4, align 8
  %13 = load %struct.lua_State*, %struct.lua_State** %2, align 8
  %14 = call i8* @luaL_checkstring(%struct.lua_State* %13, i32 2)
  store i8* %14, i8** %5, align 8
  %15 = load %struct.lua_State*, %struct.lua_State** %2, align 8
  %16 = call i8* @luaL_checkstring(%struct.lua_State* %15, i32 3)
  store i8* %16, i8** %6, align 8
  %17 = load %struct.Masscan*, %struct.Masscan** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @masscan_set_parameter(%struct.Masscan* %17, i8* %18, i8* %19)
  ret i32 0
}

declare dso_local %struct.MasscanWrapper* @luaL_checkudata(%struct.lua_State*, i32, i32) #1

declare dso_local i8* @luaL_checkstring(%struct.lua_State*, i32) #1

declare dso_local i32 @masscan_set_parameter(%struct.Masscan*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
